Fixing screensize issues
Fixes #2

Fixes carousel height. Removes padding that misaligns skills on index. Removing the window resize event.

--- a/css/main.css
+++ b/css/main.css
@@ -31,21 +31,34 @@
         background-image: url("/images/header1.jpg");
         background-repeat: no-repeat;
         background-size: cover;
-        height: 100%;
+        height: 550px;
+        max-width: 550px;
+        width: 100%;
+        max-width: 100%;
     }
     
+    div.banner p {
+        font-size: 0.5em;
+    }
+
     div.callforspeaker {
         background-image: url("/images/speaker.jpg");
         background-repeat: no-repeat;
         background-size: cover;
-        height: 100%;
+        height: 550px;
+        max-width: 550px;
+        width: 100%;
+        max-width: 100%;
     }
     
     div.callforsponsor {
         background-image: url("/images/sponsor.jpg");
         background-repeat: no-repeat;
         background-size: cover;
-        height: 100%;
+        height: 550px;
+        max-width: 550px;
+        width: 100%;
+        max-width: 100%;
     }
     
     div.callforsponsor p,
@@ -84,13 +97,14 @@
     .sponsors ul,
     .team ul {
         list-style: none;
-        margin: 100px 0;
+        margin: 30px 0;
+        padding: 0;
     }
     
     .whyus li {
         text-align: center;
     }
-    
+
     .whyus li i,
     .sponsors li i {
         font-size: 8em;
